--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "nodemon": "^2.0.4",
     "objection": "^2.2.1",
     "path": "^0.12.7",
+    "req-flash": "0.0.3",
     "socket.io": "^2.3.0",
     "sweetalert": "^2.1.2",
     "sweetalert2": "^9.17.1"
