flash messages on success

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
+    "connect-flash": "^0.1.1",
     "datatables.net": "^1.10.21",
     "escape-html": "^1.0.3",
     "express": "^4.17.1",
