flash messages on success

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.5",
     "datatables.net": "^1.10.21",
     "escape-html": "^1.0.3",
     "express": "^4.17.1",
